Refactor project. Enable publishToMavenLocal Gradle task.